Add comment to 2 ways of print wordcloud

--- a/1-Introduction/01-defining-data-science/notebook.ipynb
+++ b/1-Introduction/01-defining-data-science/notebook.ipynb
@@ -338,7 +338,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "`WordCloud` object is responsible for taking in either original text, or pre-computed list of words with their frequencies, and returns and image, which can then be displayed using `matplotlib`:"
+        "`WordCloud` object is responsible for taking in either original text, or pre-computed list of words with their frequencies, and returns and image, which can then be displayed using `matplotlib`:\n",
+        "\n",
+        "**Note:**\n",
+        "\n",
+        "- **wc.generate_from_frequencies()** print keywords by the freq of appearance of a keyword.\n",
+        "- While **wc.generate()** print keyword by all with a general view"
       ],
       "metadata": {
         "id": "wvtKzUJU-tdb"
